REL-134367 [IntegrationPoints.EventHandlers.Tests.Integration] Fix EventHandlerTest
Refactor Integration Point delete:
* Remove PreMassDeleteEventHandler - unused
* Introduce new Command mechanism for EventHandlers
* Add unit tests

--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -586,6 +586,7 @@
     <Compile Include="RelativitySourceRdo\RelativitySourceRdoHelpersFactory.cs" />
     <Compile Include="RelativitySourceRdo\RelativitySourceRdoObjectType.cs" />
     <Compile Include="RelativitySourceRdo\RelativitySourceWorkspaceRdoInitializer.cs" />
+    <Compile Include="Services\IDeleteHistoryService.cs" />
     <Compile Include="Services\IJobTracker.cs" />
     <Compile Include="Services\JobHistory\IRunningJobService.cs" />
     <Compile Include="Services\JobHistory\IUnlinkedJobHistoryService.cs" />
