REL-133481 Added UT for ExportFieldsController

--- a/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
@@ -236,6 +236,7 @@
     </Compile>
     <Compile Include="Attributes\WebAPIFilterExceptionTests.cs" />
     <Compile Include="Controllers\API\DataTransferLocationControllerTests.cs" />
+    <Compile Include="Controllers\API\ExportFieldsControllerTests.cs" />
     <Compile Include="Controllers\API\FieldCatalogControllerTests.cs" />
     <Compile Include="Controllers\API\FieldMapControllerTests.cs" />
     <Compile Include="Controllers\API\ImportPrevewControllerTests.cs" />
