--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -186,6 +186,8 @@
     <Compile Include="Repositories\Implementations\KeplerKeywordSearchRepository.cs" />
     <Compile Include="Repositories\Implementations\FieldRepository.cs" />
     <Compile Include="Repositories\IFieldRepository.cs" />
+    <Compile Include="SecretStore\ISecretManagerFactory.cs" />
+    <Compile Include="SecretStore\SecretManagerFactory.cs" />
     <Compile Include="Statistics\Implementations\DocumentTotalStatistics.cs" />
     <Compile Include="Statistics\IDocumentTotalStatistics.cs" />
     <Compile Include="Statistics\IImageTotalStatistics.cs" />
