--- a/Source/kCura.IntegrationPoint.Tests.Core/packages.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/packages.config
@@ -27,6 +27,7 @@
   <package id="Relativity.Services.DataContracts" version="9.5.218.64" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces" version="9.5.218.64" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces.Private" version="9.5.218.64" targetFramework="net462" />
+  <package id="Relativity.Telemetry.APM" version="9.4.143" targetFramework="net462" />
   <package id="Relativity.Telemetry.DataContracts.Shared" version="9.4.143" targetFramework="net462" />
   <package id="Relativity.Toggles" version="1.0.0.84" targetFramework="net462" />
   <package id="Selenium.Support" version="3.3.0" targetFramework="net462" />
