--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,9 +7,9 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="p-dv-vm-pste-2.kcura.corp" />
+		<add key="targetHost" value="localhost" />
     <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
-		<add key="databasePassword" value="P@ssw0rd@1" />
+		<add key="databasePassword" value="MySqlPassword123" />
 		
 		<!-- ========== UI tests ========== -->
 		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
