--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -110,9 +110,8 @@
       <HintPath>..\packages\Relativity.ImportExport.9.5.218.64\lib\net462\kCura.Windows.Process.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="kCura.WinEDDS, Version=9.5.218.64, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Relativity.ImportExport.9.5.218.64\lib\net462\kCura.WinEDDS.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="kCura.WinEDDS">
+      <HintPath>..\..\Dlls\kCura.WinEDDS.dll</HintPath>
     </Reference>
     <Reference Include="kCura.WinEDDS.Core, Version=9.5.218.64, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\Relativity.ImportExport.9.5.218.64\lib\net462\kCura.WinEDDS.Core.dll</HintPath>
