--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -820,6 +820,7 @@
     <Content Include="Scripts\Export\export-provider-file-name-vm.js" />
     <Content Include="Scripts\Export\export-source-view-model.js" />
     <Content Include="Scripts\Export\export-summary-page.js" />
+    <Content Include="Scripts\Export\saved-search-flat.js" />
     <Content Include="Scripts\ftpProvider\ftp-provider-summary-page.js" />
     <Content Include="Scripts\Import\import-init.js" />
     <Content Include="Scripts\Import\import-model.js" />
