tests against pl3

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -8,7 +8,8 @@
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
 		<add key="targetHost" value="localhost" />
-    <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
+		<add key="targetDbHost" value="localhost" />
+		<!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
 		<add key="databasePassword" value="MySqlPassword123" />
 		
 		<!-- ========== UI tests ========== -->
