--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,9 +7,12 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="localhost" />
+		<!--<add key="targetHost" value="localhost" />-->
+		<add key="targetHost" value="il1ddmlpl3wb001.kcura.corp" />
+	  <add key="targetDbHost" value="il1ddmlpl3db001.kcura.corp" />
     <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
-		<add key="databasePassword" value="MySqlPassword123" />
+		<!--<add key="databasePassword" value="MySqlPassword123" />-->
+	  <add key="databasePassword" value="P@ssw0rd@1" />
 		
 		<!-- ========== UI tests ========== -->
 		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
@@ -106,11 +109,11 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="kCura.Image.Viewer" publicKeyToken="78cb9311e6f3ec3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.5.218.64" newVersion="9.5.218.64" />
+				<bindingRedirect oldVersion="0.0.0.0-9.5.250.10" newVersion="9.5.250.10" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="kCura.Print" publicKeyToken="2cc1b8ab562ca316" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.5.218.64" newVersion="9.5.218.64" />
+				<bindingRedirect oldVersion="0.0.0.0-9.5.250.10" newVersion="9.5.250.10" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
