--- a/Source/kCura.IntegrationPoints.UITests/packages.config
+++ b/Source/kCura.IntegrationPoints.UITests/packages.config
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BCrypt-Official" version="0.1.109" targetFramework="net462" />
   <package id="CSharpGuidelineAnalyzer" version="1.0.3.0" targetFramework="net462" developmentDependency="true" />
+  <package id="kCura" version="9.5.257.37" targetFramework="net462" />
+  <package id="kCura.Injection" version="9.5.160.119" targetFramework="net462" />
   <package id="NUnit" version="3.4.1" targetFramework="net462" />
+  <package id="Relativity" version="9.5.250.10" targetFramework="net462" />
+  <package id="Relativity.API" version="9.5.250.10" targetFramework="net462" />
+  <package id="Relativity.Authentication.Interfaces" version="9.5.250.10" targetFramework="net462" />
+  <package id="Relativity.Core" version="9.5.250.10" targetFramework="net462" />
+  <package id="Relativity.Data" version="9.5.250.10" targetFramework="net462" />
+  <package id="Relativity.Logging.Interfaces" version="9.4.308" targetFramework="net462" />
   <package id="Relativity.Services.DataContracts" version="9.5.250.10" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces" version="9.5.250.10" targetFramework="net462" />
   <package id="Selenium.Support" version="3.3.0" targetFramework="net452" />
