--- a/Source/kCura.IntegrationPoints.Web.Tests/packages.config
+++ b/Source/kCura.IntegrationPoints.Web.Tests/packages.config
@@ -30,6 +30,7 @@
   <package id="Relativity.Services.Interfaces" version="9.5.264.6" targetFramework="net462" />
   <package id="Relativity.Telemetry.DataContracts.Shared" version="9.4.148" targetFramework="net462" />
   <package id="Relativity.Telemetry.Services.Interface" version="9.5.264.6" targetFramework="net462" />
+  <package id="Relativity.Toggles" version="1.0.0.84" targetFramework="net462" />
   <package id="SystemWrapper.Interfaces" version="0.19.0.115" targetFramework="net451" />
   <package id="ZetaLongPaths" version="1.0.0.16" targetFramework="net451" />
 </packages>
