--- a/Source/kCura.IntegrationPoints.Data/packages.config
+++ b/Source/kCura.IntegrationPoints.Data/packages.config
@@ -21,4 +21,5 @@
   <package id="Relativity.Services.Interfaces" version="9.5.264.6" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces.Private" version="9.5.264.6" targetFramework="net462" />
   <package id="Relativity.Telemetry.DataContracts.Shared" version="9.4.148" targetFramework="net462" />
+  <package id="Relativity.Toggles" version="1.0.0.84" targetFramework="net462" />
 </packages>
