--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -614,12 +614,14 @@
     <Compile Include="RelativitySourceRdo\RelativitySourceWorkspaceRdoInitializer.cs" />
     <Compile Include="Services\IDeleteHistoryService.cs" />
     <Compile Include="Services\IJobTracker.cs" />
+    <Compile Include="Services\IProcessingSourceLocationService.cs" />
     <Compile Include="Services\JobHistory\IRunningJobService.cs" />
     <Compile Include="Services\JobHistory\IUnlinkedJobHistoryService.cs" />
     <Compile Include="Services\JobHistory\IUnfinishedJobService.cs" />
     <Compile Include="Services\JobHistory\RunningJobService.cs" />
     <Compile Include="Services\JobHistory\UnfinishedJobService.cs" />
     <Compile Include="Services\JobHistory\UnlinkedJobHistoryService.cs" />
+    <Compile Include="Services\ProcessingSourceLocationService.cs" />
     <Compile Include="Tagging\ITagSavedSearch.cs" />
     <Compile Include="Tagging\ITagSavedSearchFolder.cs" />
     <Compile Include="Tagging\ITagSavedSearchManager.cs" />
