--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,18 +7,18 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<!--<add key="targetHost" value="localhost" />-->
-		<add key="targetHost" value="il1ddmlpl3wb001.kcura.corp" />
-	  <add key="targetDbHost" value="il1ddmlpl3db001.kcura.corp" />
-    <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
-		<!--<add key="databasePassword" value="MySqlPassword123" />-->
-	  <add key="databasePassword" value="P@ssw0rd@1" />
-		
+		<add key="targetHost" value="localhost" />
+	    <add key="targetDbHost" value="localhost" />
+        <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
+		<add key="databasePassword" value="MySqlPassword123" />
+	    
 		<!-- ========== UI tests ========== -->
 		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
 		<add key="ui.implicitWaitInSec" value="30" />
 		<!-- Time after tests assume there won't be more ajax calls after page loading -->
 		<add key="ui.waitForAjaxCallsInSec" value="3" />
+		<!-- Total time to wait for page to load -->
+		<add key="ui.waitForPageInSec" value="90" />
 		<!-- === End of UI tests ========== -->
 				
 		<!-- Service Bus specific app setings for messaging connections -->
@@ -109,11 +109,11 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="kCura.Image.Viewer" publicKeyToken="78cb9311e6f3ec3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.5.245.43" newVersion="9.5.245.43" />
+				<bindingRedirect oldVersion="0.0.0.0-9.5.264.6" newVersion="9.5.264.6" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="kCura.Print" publicKeyToken="2cc1b8ab562ca316" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.5.245.43" newVersion="9.5.245.43" />
+				<bindingRedirect oldVersion="0.0.0.0-9.5.264.6" newVersion="9.5.264.6" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
