--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -210,6 +210,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="WebDriver, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.3.0\lib\net40\WebDriver.dll</HintPath>
