--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/packages.config
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/packages.config
@@ -13,6 +13,7 @@
   <package id="Relativity.API" version="9.5.275.29" targetFramework="net462" />
   <package id="Relativity.Authentication.Interfaces" version="9.5.275.29" targetFramework="net462" />
   <package id="Relativity.Kepler" version="1.0.1.409" targetFramework="net462" />
+	<package id="Relativity.Kepler.Client" version="1.0.1.409" targetFramework="net462" />
   <package id="Relativity.Logging.Interfaces" version="9.4.308" targetFramework="net462" />
   <package id="Relativity.Telemetry.APM" version="9.4.148" targetFramework="net462" />
 </packages>
