--- a/Source/kCura.IntegrationPoints.UITests/packages.config
+++ b/Source/kCura.IntegrationPoints.UITests/packages.config
@@ -4,6 +4,8 @@
   <package id="NUnit" version="3.4.1" targetFramework="net462" />
   <package id="Relativity.Services.DataContracts" version="9.5.275.29" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces" version="9.5.275.29" targetFramework="net462" />
+  <package id="Relativity.Kepler" version="1.0.1.409" targetFramework="net462" />
+  <package id="Relativity.Kepler.Client" version="1.0.1.409" targetFramework="net462" />
   <package id="Selenium.Support" version="3.3.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.3.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net452" />
