--- a/Source/kCura.IntegrationPoint.Tests.Core/Release/App.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/Release/App.config
@@ -8,13 +8,17 @@
 		<!-- test env specific settings-->
 		<add key="ProtocolVersion" value="http" />
 		<add key="targetHost" value="localhost" />
-		<add key="databasePassword" value="P@ssw0rd@1" />
-
+		<add key="targetDbHost" value="localhost" />
+		<!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
+		<add key="databasePassword" value="MySqlPassword123" />
+	    
 		<!-- ========== UI tests ========== -->
 		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
 		<add key="ui.implicitWaitInSec" value="30" />
 		<!-- Time after tests assume there won't be more ajax calls after page loading -->
 		<add key="ui.waitForAjaxCallsInSec" value="3" />
+		<!-- Total time to wait for page to load -->
+		<add key="ui.waitForPageInSec" value="90" />
 		<!-- === End of UI tests ========== -->
 		
 		<!-- Service Bus specific app setings for messaging connections -->
