--- a/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/packages.config
+++ b/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/packages.config
@@ -6,6 +6,7 @@
   <package id="CSharpGuidelineAnalyzer" version="1.0.3.0" targetFramework="net462" developmentDependency="true" />
   <package id="kCura" version="9.5.275.29" targetFramework="net462" />
   <package id="kCura.Injection" version="9.5.275.29" targetFramework="net462" />
+	<package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net451" />
   <package id="NUnit" version="3.4.1" targetFramework="net451" />
   <package id="Relativity.API" version="9.5.275.29" targetFramework="net462" />
