revert hostname in test config

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,7 +7,7 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="p-dv-vm-akor-3.kcura.corp" />
+		<add key="targetHost" value="localhost" />
     <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
 		<add key="databasePassword" value="MySqlPassword123" />
 		
