--- a/Source/kCura.IntegrationPoints.Security.Tests/kCura.IntegrationPoints.Security.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Security.Tests/kCura.IntegrationPoints.Security.Tests.csproj
@@ -82,6 +82,9 @@
   <ItemGroup>
     <Analyzer Include="..\packages\CSharpGuidelineAnalyzer.1.0.3.0\analyzers\dotnet\cs\CSharpGuidelineAnalyzer.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
