fixed app config

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,8 +7,8 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="p-dv-vm-kdab-5.kcura.corp" />
-		<add key="targetDbHost" value="p-dv-vm-kdab-5.kcura.corp" />
+		<add key="targetHost" value="" />
+		<add key="targetDbHost" value="localhost" />
 		<!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
 		<add key="databasePassword" value="MySqlPassword123" />
 	    
