--- a/source/kCura.IntegrationPoints.ImportProvider/kCura.IntegrationPoints.ImportProvider.csproj
+++ b/source/kCura.IntegrationPoints.ImportProvider/kCura.IntegrationPoints.ImportProvider.csproj
@@ -63,7 +63,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.Apps.Common.Utils, Version=2.1.3.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>9.5.292.19.Apps.Common.Utils.2.1.3\lib\net462\kCura.Apps.Common.Utils.dll</HintPath>
+      <HintPath>..\packages\kCura.Apps.Common.Utils.2.1.3\lib\net462\kCura.Apps.Common.Utils.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.IntegrationPoints.Contracts">
